--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,8 @@ border-radius:20px;
 {
 font-size:36px;
 color:#131313;
-font-family: 'Sacramento', cursive;
+font-family: 'Arial';
+/*'Sacramento', cursive;*/
 }
 
 #banner h1 a
