--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ border-radius:20px;
 {
 font-size:36px;
 color:#131313;
-font-family: Open Sans', sans-serif;
+font-family: 'Open Sans', sans-serif;
 /*'Sacramento', cursive;*/
 }
 
