--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ border-radius:20px;
 font-size:36px;
 color:#131313;
 font-family: 'Open Sans', sans-serif;
+padding:5px 5px 5px 5px;
 /*'Sacramento', cursive;*/
 }
 
@@ -91,6 +92,7 @@ font-family: 'Open Sans', sans-serif;
 {
 text-align:center;
 line-height:40px;
+padding:5px 5px 5px 5px;
 }
 
 @keyframes myfirst
