--- a/styles.css
+++ b/styles.css
@@ -16,35 +16,9 @@ color:#131313;
 
 a:hover
 {
-color:#33a1de;
+text-decoration:underline;
 }
 
-body
-{
-font-family: 'Quicksand', sans-serif;
-background:url(images/wild_oliva.png);
-}
-header
-{
-height:50px;
-background-color:rgba(013,013,013,0.7);
-border-bottom:3px solid #131313;
-}
-header #logo
-{
-float:left;
-padding:1% 1% 1% 1%;
-width:150px;
-}
-
-header #logo h1
-{
-/*font-family: 'Julius Sans One', sans-serif;*/
-font-family: 'Quicksand', sans-serif;
-font-size:1.5em;
-color:#ffffff;
-
-}
 #wrapper
 {
 max-width:1000px;
@@ -53,17 +27,16 @@ margin:auto;
 
 #nachdaBalak
 {
-max-width:35%;
+max-width:25%;
 margin:auto;
 margin-top:10%;
 position:relative;
 }
 
-#nachdaBalak h1
+#nachdaBalak img
 {
-font-size:4em;
+background:red;
 position:relative;
-font-family: 'Open Sans', sans-serif;
 animation-name:myfirst;
 animation-duration:5s;
 animation-timing-function:linear;
@@ -110,6 +83,7 @@ border-radius:20px;
 {
 font-size:36px;
 color:#131313;
+font-family: 'Open Sans', sans-serif;
 padding:5px 5px 5px 5px;
 /*'Sacramento', cursive;*/
 }
@@ -156,3 +130,4 @@ padding:5px 5px 5px 5px;
 75%  { left:50px; }
 100% { left:-50px; }
 }
+   
